force-app/main/default/objects/Video_Purchase__c/Video_Purchase__c.object-meta.xml
<CustomObject>
    <description>Records an individual video purchase made by a student.</description>
    <label>Video Purchase</label>
    <nameField>
        <displayFormat>VP-{0000}</displayFormat>
        <label>Purchase Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Video Purchases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>