force-app/main/default/objects/Video_Purchase__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Video Purchases</relationshipLabel>
    <relationshipName>Video_Purchases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>