force-app/main/default/objects/Video_Purchase__c/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <label>Video</label>
    <referenceTo>Guitar_Video__c</referenceTo>
    <relationshipLabel>Purchases</relationshipLabel>
    <relationshipName>Purchases</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>